# Queue

./: Makefile  build.sh  code5  gettag.html  info Celery  pyproject.toml  req.txt  requirements.txt
apps/account/: admin.py  managers.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py  0002_alter_queueuser_activation_code.py  0003_remove_queueuser_auth_mode_remove_queueuser_blocked_and_more.py  0004_alter_queueuser_is_active_and_more.py  0004_alter_queueuser_window_number.py  0005_alter_queueuser_is_active.py  0005_alter_queueuser_position.py  0006_alter_queueuser_is_active.py
apps/administrator/: admin.py  apps.py  models.py
apps/bank/: admin.py  models.py  serializers.py
apps/bank/migrations/: 0001_initial.py
apps/client/: admin.py  models.py  serializers.py
apps/client/migrations/: 0001_initial.py  0002_initial.py
apps/equipment/: admin.py  models.py  serializers.py
apps/equipment/migrations/: 0001_initial.py
apps/manager/: admin.py  models.py
apps/operators/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/operators/migrations/: 0001_initial.py  (+6 more)
apps/queue/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/registrator/: apps.py
apps/talon/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
config/: celery.py  celery_start.sh  settings.py  urls.py
operator_panel/: admin.py  apps.py  models.py  serializers.py
operator_panel/migrations/: 0001_initial.py
staticfiles/: staticfiles.json
(+33 files in other folders)
