[tool.poetry]
name = "electronic_queue"
version = "0.1.0"
description = ""
authors = ["kadirbekova43 <kadirbekova43@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.2"
psycopg2-binary = "^2.9.6"
djangorestframework = "^3.14.0"
python-decouple = "^3.8"
django-filter = "^23.2"
django-cors-headers = "^4.0.0"
dj-database-url = "^2.0.0"
whitenoise = "^6.4.0"
drf-yasg = "^1.21.5"
celery = "^5.3.0"
redis = "^4.5.5"
djangorestframework-simplejwt = "^5.2.2"
django-crontab = "^0.7.1"
loguru = "^0.7.0"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]

#[build-system]
#requires = ["poetry-core>=1.0.0"]
#build-backend = "poetry.core.masonry.api"
#python = "^3.10"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
